# vk_test

./: .gitignore  CMakeLists.txt  main.cpp  run.bat  run.sh
app/: VkApp.cpp  VkApp.h
res/shaders/: vertex.vert
